deploy/lab/kibana/base/namespace.yml
---
# Create a namespace to host cluster logging components.
kind: Namespace
apiVersion: v1
metadata:
  name: logging
