deploy/lab/kibana/base/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:7.17.0
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 256Mi
          ports:
            - containerPort: 5601
            - containerPort: 5601
