deploy/lab/kibana/base/service.yml
---
# Create a service to expose the ElasticSearch deployment on the service network at TCP/9200.
# For convenience, the service also exposes a node port to permit smoke testing or external
# access to the ES server.
kind: Service
apiVersion: v1
metadata:
  name: kibana
spec:
  selector:
    app: kibana
  ports:
    - port: 5601
      protocol: TCP
      targetPort: 5601
      name: http
