deploy/lab/kibana/base/ingress.yml
---
# Create an ingress to access the Kibana service.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
spec:
  rules:
    - host: kibana.lab
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kibana
                port:
                  number: 5601
